feat(projects): 增加上传图片接口,完善添加商品逻辑
