# src/controllers/product/addProduct.js
@@ -4,7 +4,7 @@ const {User} = require('../../mysql/User');
 // 添加商品接口处理函数
 const addProduct = async (req, res) => {
     try {
-        const {openid, productName, price, quantity, category, description, images} = req.body;
+        const {openid, productName, price, quantity, category, description,  imagePath} = req.body;
         // const {openid} = req.headers;
 
         // 获取用户信息
@@ -13,16 +13,22 @@ const addProduct = async (req, res) => {
         if (!user) {
             return res.status(404).json({error: 'User not found'});
         }
-        console.log(openid, productName, price, quantity, category, description, images)
+        // 确保 images 参数存在且是数组
+        const image1 = imagePath && imagePath.length > 0 ? imagePath[0] : null;
+        const image2 = imagePath && imagePath.length > 1 ? imagePath[1] : null;
+        const image3 = imagePath && imagePath.length > 2 ? imagePath[2] : null;
+
+
+        console.log(openid, productName, price, quantity, category, description, imagePath)
         // 创建商品记录
         const newProduct = await Product.create({
             Title: productName,
             Description: description || null,
             Price: price,
             Category: category,
-            // Image1: images[0] || null,
-            // Image2: images[1] || null,
-            // Image3: images[2] || null,
+            Image1: image1,
+            Image2: image2,
+            Image3: image3,
             Quantity: quantity && quantity > 1 ? quantity : 1, // 默认设置数量为 1
             userid: user.id,
         });
